# ai-hr

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  app.py  chainlit.md  chat_history.py  database.py  docker-compose.yml  hr_agent.py  logger_config.py  main.py  prompt.py  pyproject.toml  schemas.py
.chainlit/: config.toml
.github/workflows/: ci.yml
src/auth/: __init__.py  auth.py
src/database/: config.py  data_layer.py  models.py
src/hr_agent/: agent.py  tools.py
src/shared/: chat_history.py  database_url.py  google_sheets.py  logger_config.py  pdf_processor.py  profile_saver.py  prompt.py  schemas.py
